--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/fkei/JSON.minify.git"
+        "url": "https://github.com/jlines/JSON.minify.git"
     },
     "devDependencies": {
         "mocha": "*",
@@ -34,7 +34,8 @@
     "os": [
         "darwin",
         "linux",
-        "win32"
+        "win32", 
+        "sunos"
     ],
     "main": "./minify.json.js"
 }
